--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -161,6 +161,14 @@
     <Compile Include="Domain\Stores\StoreMapping.cs" />
     <Compile Include="Domain\Themes\ThemeSettings.cs" />
     <Compile Include="Domain\Themes\ThemeVariable.cs" />
+    <Compile Include="Email\Attachment.cs" />
+    <Compile Include="Email\DefaultEmailSender.cs" />
+    <Compile Include="Email\EmailAddress.cs" />
+    <Compile Include="Email\EmailException.cs" />
+    <Compile Include="Email\EmailMessage.cs" />
+    <Compile Include="Email\IEmailSender.cs" />
+    <Compile Include="Email\IEmailSenderExtensions.cs" />
+    <Compile Include="Email\SmtpContext.cs" />
     <Compile Include="Extensions\HttpExtensions.cs" />
     <Compile Include="Extensions\XmlWriterExtensions.cs" />
     <Compile Include="IMergedData.cs" />
