--- a/src/Plugins/ExternalAuth.Facebook/SmartStore.Plugin.ExternalAuth.Facebook.csproj
+++ b/src/Plugins/ExternalAuth.Facebook/SmartStore.Plugin.ExternalAuth.Facebook.csproj
@@ -74,8 +74,9 @@
       <Private>False</Private>
       <HintPath>..\..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Newtonsoft.Json.5.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Newtonsoft.Json.6.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -187,7 +188,6 @@
   <ItemGroup>
     <EmbeddedResource Include="Views\ExternalAuthFacebook\Configure.cshtml" />
     <EmbeddedResource Include="Views\ExternalAuthFacebook\PublicInfo.cshtml" />
-    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="web.config" />
   </ItemGroup>
